added cell for data printing

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,8 +375,87 @@
     "TP, FP, FN, TN = 705, 316760, 1795, 930740\n",
     "TP, FP, FN, TN = 608, 264199, 892, 484301\n",
     "TP, FP, FN, TN = 752, 337203, 748, 411297\n",
-    "TP, FP, FN, TN = 864. 404224, 637, 344276\n",
+    "TP, FP, FN, TN = 864, 404224, 637, 344276\n",
     "TP, FP, FN, TN = 836, 384614, 664, 363886"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threshold: 0.5\n",
+      "TP: 49 FP: 18923 FN: 3933 TN: 1968841\n",
+      "True Positive Rate: 0.012305374183827222\n",
+      "False Positive Rate: 0.009523315843137807\n",
+      "False Negative Rate: 0.9876946258161727\n",
+      "True Negative Rate: 0.9908521211181781\n",
+      "Threshold: 0.01\n",
+      "TP: 144 FP: 53320 FN: 1356 TN: 695180\n",
+      "True Positive Rate: 0.096\n",
+      "False Positive Rate: 0.07123580494321977\n",
+      "False Negative Rate: 0.904\n",
+      "True Negative Rate: 0.9287641950567802\n",
+      "Threshold: 0.005\n",
+      "TP: 209 FP: 88644 FN: 1791 TN: 909356\n",
+      "True Positive Rate: 0.1045\n",
+      "False Positive Rate: 0.08882164328657315\n",
+      "False Negative Rate: 0.8955\n",
+      "True Negative Rate: 0.9111783567134268\n",
+      "Threshold: 0.0005\n",
+      "TP: 307 FP: 121620 FN: 1193 TN: 626880\n",
+      "True Positive Rate: 0.20466666666666666\n",
+      "False Positive Rate: 0.16248496993987976\n",
+      "False Negative Rate: 0.7953333333333333\n",
+      "True Negative Rate: 0.8375150300601203\n",
+      "Threshold: 5e-05\n",
+      "TP: 705 FP: 316760 FN: 1795 TN: 930740\n",
+      "True Positive Rate: 0.282\n",
+      "False Positive Rate: 0.25391583166332665\n",
+      "False Negative Rate: 0.718\n",
+      "True Negative Rate: 0.7460841683366733\n",
+      "Threshold: 5e-06\n",
+      "TP: 608 FP: 264199 FN: 892 TN: 484301\n",
+      "True Positive Rate: 0.4053333333333333\n",
+      "False Positive Rate: 0.3529712758851035\n",
+      "False Negative Rate: 0.5946666666666667\n",
+      "True Negative Rate: 0.6470287241148964\n",
+      "Threshold: 5e-07\n",
+      "TP: 752 FP: 337203 FN: 748 TN: 411297\n",
+      "True Positive Rate: 0.5013333333333333\n",
+      "False Positive Rate: 0.45050501002004006\n",
+      "False Negative Rate: 0.49866666666666665\n",
+      "True Negative Rate: 0.5494949899799599\n",
+      "Threshold: 5e-08\n",
+      "TP: 864 FP: 404224 FN: 637 TN: 344276\n",
+      "True Positive Rate: 0.5756162558294471\n",
+      "False Positive Rate: 0.5396856337591907\n",
+      "False Negative Rate: 0.42438374417055297\n",
+      "True Negative Rate: 0.4596481437224883\n",
+      "Threshold: 1e-07\n",
+      "TP: 836 FP: 384614 FN: 664 TN: 363886\n",
+      "True Positive Rate: 0.5573333333333333\n",
+      "False Positive Rate: 0.5138463593854375\n",
+      "False Negative Rate: 0.44266666666666665\n",
+      "True Negative Rate: 0.48615364061456245\n"
+     ]
+    }
+   ],
+   "source": [
+    "the_dict = {0.5: [49, 18923, 3933, 1968841], 0.01: [144, 53320, 1356, 695180], 0.005: [209, 88644, 1791, 909356], \n",
+    "           0.0005: [307, 121620, 1193, 626880], 0.00005: [705, 316760, 1795, 930740], 0.000005: [608, 264199, 892, 484301], \n",
+    "           0.0000005: [752, 337203, 748, 411297], 0.00000005: [864, 404224, 637, 344276], 0.0000001: [836, 384614, 664, 363886]}\n",
+    "for key, values in the_dict.items():\n",
+    "    print(\"Threshold:\", key)\n",
+    "    print(\"TP:\", values[0], \"FP:\", values[1], \"FN:\", values[2], \"TN:\", values[3])\n",
+    "    print(\"True Positive Rate:\", values[0] / (values[0] + values[2]))\n",
+    "    print(\"False Positive Rate:\", values[1] / ((values[0] + values[2]) * (len(Y) // 10 - 1)))\n",
+    "    print(\"False Negative Rate:\", values[2] / (values[0] + values[2]))\n",
+    "    print(\"True Negative Rate:\", values[3] / ((values[0] + values[2]) * (len(Y) // 10 - 1)))"
    ]
   },
   {
