--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -6,24 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model import SiameseNetwork"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = SiameseNetwork()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "import data_preprocessing as dp\n",
     "import tqdm\n",
@@ -40,11 +22,30 @@
     "tmp_dir = 'tmp'\n",
     "train_set, test_set = dp.load_dataset(tmp_dir, data_dir)\n",
     "del train_set\n",
+    "X = []\n",
     "Y = []\n",
-    "for _ in range(len(test_set)):\n",
-    "    for i in range(len(test_set[_])):\n",
-    "        Y.append(_)\n",
-    "print(Y)"
+    "for _, cat in enumerate(test_set):\n",
+    "    for img in cat:\n",
+    "        X.append(img)\n",
+    "        Y.append(_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from model import SiameseNetwork"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = SiameseNetwork()"
    ]
   },
   {
@@ -68,18 +69,19 @@
    "outputs": [],
    "source": [
     "# 1 VS ALL\n",
-    "treshold_list = [0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95]\n",
-    "for threshold in treshold_list:\n",
+    "os.path.exists(tmp_dir + '/rates.txt') and os.remove(tmp_dir + '/rates.txt')\n",
+    "threshold_list = [0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95]\n",
+    "for threshold in threshold_list:\n",
     "    print(\"Threshold:\", threshold)\n",
     "    TP, FP, FN, TN = 0, 0, 0, 0\n",
-    "    for i, x in tqdm.tqdm(enumerate(test_set), total=len(test_set)):\n",
+    "    for i, x in tqdm.tqdm(enumerate(X), total=len(X)):\n",
     "        if i != 0 and i % 250 == 0:\n",
     "            print(\"Threshold:\", threshold)\n",
     "            print(\"TP:\", TP, \"FP:\", FP, \"FN:\", FN, \"TN:\", TN)\n",
     "            print(\"True Positive Rate:\", TP / i)\n",
-    "            print(\"False Positive Rate:\", FP / (i * (len(Y) // 10 - 1)))\n",
+    "            print(\"False Positive Rate:\", FP / (i * (len(Y) // 3 - 1)))\n",
     "            print(\"False Negative Rate:\", FN / i)\n",
-    "            print(\"True Negative Rate:\", TN / (i * (len(Y) // 10 - 1)))\n",
+    "            print(\"True Negative Rate:\", TN / (i * (len(Y) // 3 - 1)))\n",
     "        for category in range(0, len(Y), 3):\n",
     "            if not Y[i] == category // 3:\n",
     "                scores = s.predict([x * 3], X[category: category + 3])\n",
@@ -96,48 +98,45 @@
     "                    FN += 1\n",
     "                else:\n",
     "                    TN += 1\n",
+    "        break\n",
     "                    \n",
     "    GAR[threshold] = TP / len(X)\n",
-    "    FAR[threshold] = FP / (len(X) * (len(Y) // 10 - 1))\n",
+    "    FAR[threshold] = FP / (len(X) * (len(Y) // 3 - 1))\n",
     "    FRR[threshold] = FN / len(X)\n",
-    "    GRR[threshold] = TN / (len(X) * (len(Y) // 10 - 1))"
+    "    GRR[threshold] = TN / (len(X) * (len(Y) // 3 - 1))\n",
+    "    with open(tmp_dir + '/rates.txt', 'a', encoding='utf-8', ) as w:\n",
+    "        w.write(str(threshold) + '\\n')\n",
+    "        w.write(str(TP) + ' ' + str(FP) + ' ' + str(FN) + ' ' + str(TN) + '\\n')\n",
+    "        w.write(str(TP / len(X)) + '\\n')\n",
+    "        w.write(str(FP / (len(X) * (len(Y) // 3 - 1))) + '\\n')\n",
+    "        w.write(str(FN / len(X)) + '\\n')\n",
+    "        w.write(str(TN / (len(X) * (len(Y) // 3 - 1))) + '\\n\\n')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FPR = []\n",
-    "FNR = []\n",
-    "for key, values in the_dict.items():\n",
-    "    print()\n",
-    "    print(\"Threshold:\", key)\n",
-    "    print(\"TP:\", values[0], \"FP:\", values[1], \"FN:\", values[2], \"TN:\", values[3])\n",
-    "    print(\"True Positive Rate:\", values[0] / (values[0] + values[2]))\n",
-    "    print(\"False Positive Rate:\", values[1] / ((values[0] + values[2]) * (len(Y) // 10 - 1)))\n",
-    "    FPR.append(values[1] / ((values[0] + values[2]) * (len(Y) // 10 - 1)))\n",
-    "    print(\"False Negative Rate:\", values[2] / (values[0] + values[2]))\n",
-    "    FNR.append(values[2] / (values[0] + values[2]))\n",
-    "    print(\"True Negative Rate:\", values[3] / ((values[0] + values[2]) * (len(Y) // 10 - 1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "plt.title(\"Error Rates\")\n",
-    "plt.plot(the_dict.keys(), FPR, \"r-\", label=\"False Positive Rate\")\n",
-    "plt.plot(the_dict.keys(), FNR, \"b-\", label=\"False Negative Rate\")\n",
+    "plt.plot(FAR.keys(), FAR.values(), \"r-\", label=\"False Positive Rate\")\n",
+    "plt.plot(FRR.keys(), FRR.values(), \"b-\", label=\"False Negative Rate\")\n",
     "plt.xlabel(\"Threshold\")\n",
     "plt.ylabel(\"Probabilità di errore\")\n",
     "plt.legend()\n",
     "plt.show()\n",
-    "plt.savefig(\"Error Rates.png\")"
+    "plt.savefig(\"Error Rates.png\")\n",
+    "\n",
+    "for threshold in threshold_list:\n",
+    "    print(GAR[threshold])\n",
+    "    print(FAR[threshold])\n",
+    "    print(FRR[threshold])\n",
+    "    print(GRR[threshold])\n",
+    "    print()"
    ]
   },
   {
