other minor tweak

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -98,8 +98,6 @@
     "                    FN += 1\n",
     "                else:\n",
     "                    TN += 1\n",
-    "        break\n",
-    "                    \n",
     "    GAR[threshold] = TP / len(X)\n",
     "    FAR[threshold] = FP / (len(X) * (len(Y) // 3 - 1))\n",
     "    FRR[threshold] = FN / len(X)\n",
@@ -129,14 +127,7 @@
     "plt.ylabel(\"Probabilità di errore\")\n",
     "plt.legend()\n",
     "plt.show()\n",
-    "plt.savefig(\"Error Rates.png\")\n",
-    "\n",
-    "for threshold in threshold_list:\n",
-    "    print(GAR[threshold])\n",
-    "    print(FAR[threshold])\n",
-    "    print(FRR[threshold])\n",
-    "    print(GRR[threshold])\n",
-    "    print()"
+    "plt.savefig(\"Error Rates.png\")"
    ]
   },
   {
