--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -70,7 +70,10 @@
    "source": [
     "# 1 VS ALL\n",
     "os.path.exists(tmp_dir + '/rates.txt') and os.remove(tmp_dir + '/rates.txt')\n",
-    "threshold_list = [0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95]\n",
+    "threshold_list = [1e-8, 3e-8, 5e-8, 7e-8, 9e-8, \n",
+    "                  1e-7, 3e-7, 5e-7, 7e-7, 9e-7, \n",
+    "                  1e-6, 3e-6, 5e-6, 7e-6, 9e-6, \n",
+    "                  1e-5, 3e-5, 5e-5, 7e-5, 9e-5]\n",
     "for threshold in threshold_list:\n",
     "    print(\"Threshold:\", threshold)\n",
     "    TP, FP, FN, TN = 0, 0, 0, 0\n",
