--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -78,7 +78,7 @@
     "    print(\"Threshold:\", threshold)\n",
     "    TP, FP, FN, TN = 0, 0, 0, 0\n",
     "    for i, x in tqdm.tqdm(enumerate(X), total=len(X)):\n",
-    "        if False and i != 0 and i % 250 == 0:\n",
+    "        if i != 0 and i % 250 == 0:\n",
     "            print(\"Threshold:\", threshold)\n",
     "            print(\"TP:\", TP, \"FP:\", FP, \"FN:\", FN, \"TN:\", TN)\n",
     "            print(\"True Positive Rate:\", TP / i)\n",
