--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -27,7 +27,8 @@
     "for _, cat in enumerate(test_set):\n",
     "    for img in cat:\n",
     "        X.append(img)\n",
-    "        Y.append(_)"
+    "        Y.append(_)\n",
+    "del test_set"
    ]
   },
   {
@@ -108,10 +109,10 @@
     "    with open(tmp_dir + '/rates.txt', 'a', encoding='utf-8', ) as w:\n",
     "        w.write(str(threshold) + '\\n')\n",
     "        w.write(str(TP) + ' ' + str(FP) + ' ' + str(FN) + ' ' + str(TN) + '\\n')\n",
-    "        w.write(str(TP / len(X)) + '\\n')\n",
-    "        w.write(str(FP / (len(X) * (len(Y) // 3 - 1))) + '\\n')\n",
-    "        w.write(str(FN / len(X)) + '\\n')\n",
-    "        w.write(str(TN / (len(X) * (len(Y) // 3 - 1))) + '\\n\\n')"
+    "        w.write(str(GAR[threshold]) + '\\n')\n",
+    "        w.write(str(FAR[threshold]) + '\\n')\n",
+    "        w.write(str(FRR[threshold]) + '\\n')\n",
+    "        w.write(str(GRR[threshold]) + '\\n\\n')"
    ]
   },
   {
@@ -130,7 +131,7 @@
     "plt.ylabel(\"Probabilità di errore\")\n",
     "plt.legend()\n",
     "plt.show()\n",
-    "plt.savefig(\"Error Rates.png\")"
+    "plt.savefig(tmp_dir + \"Error Rates.png\")"
    ]
   },
   {
