QoL changes: an error correction

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -131,7 +131,7 @@
     "plt.ylabel(\"Probabilità di errore\")\n",
     "plt.legend()\n",
     "plt.show()\n",
-    "plt.savefig(tmp_dir + \"Error Rates.png\")"
+    "plt.savefig(tmp_dir + \"/Error Rates.png\")"
    ]
   },
   {
