graph generating code from file

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -102,11 +102,12 @@
     "                    FN += 1\n",
     "                else:\n",
     "                    TN += 1\n",
+    "        break\n",
     "    GAR[threshold] = TP / len(X)\n",
     "    FAR[threshold] = FP / (len(X) * (len(Y) // 3 - 1))\n",
     "    FRR[threshold] = FN / len(X)\n",
     "    GRR[threshold] = TN / (len(X) * (len(Y) // 3 - 1))\n",
-    "    with open(tmp_dir + '/rates.txt', 'a', encoding='utf-8', ) as w:\n",
+    "    with open(tmp_dir + '/rates.txt', 'a', encoding='utf-8') as w:\n",
     "        w.write(str(threshold) + '\\n')\n",
     "        w.write(str(TP) + ' ' + str(FP) + ' ' + str(FN) + ' ' + str(TN) + '\\n')\n",
     "        w.write(str(GAR[threshold]) + '\\n')\n",
@@ -124,6 +125,27 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "tmp_dir = 'tmp'\n",
+    "\n",
+    "threshold = 0\n",
+    "GAR = {} #Genuine acceptance rate (TPR)\n",
+    "FAR = {} #False acceptance (FPR)\n",
+    "FRR = {} #False regectance rate (FNR)\n",
+    "GRR = {} #Genuine regectance rate (TNR)\n",
+    "\n",
+    "with open(tmp_dir + '/rates.txt', encoding='utf-8') as r:\n",
+    "    for n, line in enumerate(r.readlines()):\n",
+    "        line = line.strip()\n",
+    "        if n%7 == 0:\n",
+    "            threshold = float(line)\n",
+    "        elif n%7 == 2:\n",
+    "            GAR[threshold] = float(line)\n",
+    "        elif n%7 == 3:\n",
+    "            FAR[threshold] = float(line)\n",
+    "        elif n%7 == 4:\n",
+    "            FRR[threshold] = float(line)\n",
+    "        elif n%7 == 5:\n",
+    "            GRR[threshold] = float(line)\n",
     "plt.title(\"Error Rates\")\n",
     "plt.plot(FAR.keys(), FAR.values(), \"r-\", label=\"False Positive Rate\")\n",
     "plt.plot(FRR.keys(), FRR.values(), \"b-\", label=\"False Negative Rate\")\n",
@@ -132,6 +154,36 @@
     "plt.legend()\n",
     "plt.show()\n",
     "plt.savefig(tmp_dir + \"/Error Rates.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.title(\"ROC\")\n",
+    "plt.plot(FAR.values(), GAR.values(), \"r-\")\n",
+    "plt.xlabel(\"FAR\")\n",
+    "plt.ylabel(\"GAR\")\n",
+    "plt.show()\n",
+    "plt.savefig(tmp_dir + \"/ROC.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.title(\"DET\")\n",
+    "plt.plot(FAR.values(), FRR.values(), \"r-\")\n",
+    "plt.xscale('log')\n",
+    "plt.yscale('log')\n",
+    "plt.xlabel(\"FAR\")\n",
+    "plt.ylabel(\"FRR\")\n",
+    "plt.show()\n",
+    "plt.savefig(tmp_dir + \"/DET.png\")"
    ]
   },
   {
